rewrite all in declarative